updated server for POST requests updated static files also

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,20 @@
     <h2>My Express App</h2>
     <Input placeholder="user name" type="text" id="userName">
     <button onclick="getUserInfo()">Get user info</button>
+  
+    
     <p id="userInfo"></p>
+    <h3>User registration</h3>
+    <Input placeholder="user name" type="text" id="user-Name">
+    <Input placeholder="user Id" type="text" id="userId">
+    <Input placeholder="user message" type="text" id="userMsg">
+    <button onclick="handleSubmit()">Submit</button>
+    <p id="submitInfo"></p>
+
+    <h3>Get All Users</h3>
+    <button onclick="getAllUsers()">Get</button>
+    <p id="result"></p>
+    
 
 </body>
 </html>
